--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install docker
 script:
   - molecule test --driver docker
-  - travis_wait 30 molecule test
+  - travis_wait 30 molecule test --driver docker
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
