--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -116,6 +116,7 @@ azkaban_exec_server_flow_num_job_threads: 10
 azkaban_exec_server_job_max_xms: 1GB
 azkaban_exec_server_job_max_xmx: 2GB
 azkaban_exec_server_flow_max_running_minutes: -1
+azkaban_exec_mem_check_enabled: true
 
 ## Azkaban multiple executors mode parameters
 azkaban_executorselector_filters: StaticRemainingFlowSize,MinimumFreeMemory,CpuStatus
