--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,7 +1,9 @@
-- src: idealista.mysql-role
-  version: 1.2.2
+- src: https://github.com/idealista/mysql-role.git
+  scm: git
+  version: 2.2.1
   name: mysql
 
-- src: idealista.java-role
-  version: 2.0.0
+- src: https://github.com/idealista/java-role.git
+  scm: git
+  version: 4.0.0
   name: java
