--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install molecule==2.19
   - pip install docker
 script:
-  - travis_wait 60 molecule test --driver docker
+  - travis_wait 60 molecule test --driver-name docker
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
