--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 ---
 language: python
-python: "2.7.13"
+python: "2.7.15"
 sudo: required
 
 services:
   - docker
 install:
-  - pip install ansible==2.4.5.0
-  - pip install molecule==2.19
-  - pip install docker
+  - pip install pipenv
+  - pipenv install -r test-requirements.txt
 script:
-  - travis_wait 60 molecule test --driver-name docker
+  - pipenv run molecule test --all
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
