#5 Fix tests and removing .vm tld

--- a/molecule/azkabanwebsolo/group_vars/executor.yml
+++ b/molecule/azkabanwebsolo/group_vars/executor.yml
@@ -1,5 +1,5 @@
 ---
 ## AZKABAN
 azkaban_db_hostname: "azkabanwebsolo"
-azkaban_web_server_host: "azkabanwebsolo.vm"
+azkaban_web_server_host: "azkabanwebsolo"
 azkaban_use_multiple_executors: false
