--- a/molecule/azkabanwebsolo/group_vars/websolo.yml
+++ b/molecule/azkabanwebsolo/group_vars/websolo.yml
@@ -1,4 +1,4 @@
 ---
 ## AZKABAN
 azkaban_db_hostname: "azkabanwebsolo"
-azkaban_web_server_host: "azkabanwebsolo.vm"
+azkaban_web_server_host: "azkabanwebsolo"
