--- a/molecule/azkabanwebsolo/verify.yml
+++ b/molecule/azkabanwebsolo/verify.yml
@@ -37,8 +37,9 @@
       template:
         src: "{{ item }}"
         dest: "{{ goss_test_directory }}/{{ item | basename }}"
-      with_fileglob:
-        - "{{ playbook_dir }}/tests/test_*.yml"
+      with_items:
+        - "{{ playbook_dir }}/tests/test_azkaban.yml"
+        - "{{ playbook_dir }}/tests/test_{{ inventory_hostname }}.yml"
 
     - name: Register test files
       shell: "ls {{ goss_test_directory }}/test_*.yml"
