#5 Update java role URL and remove Vagrant from README

--- a/molecule/azkabanwebsolo/requirements.yml
+++ b/molecule/azkabanwebsolo/requirements.yml
@@ -3,7 +3,7 @@
   version: 2.2.2
   name: mysql
 
-- src: https://github.com/idealista/java-role.git
+- src: https://github.com/idealista/java_role.git
   scm: git
   version: 4.1.0
   name: java
