--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
 
 - name: Azkaban | Install
-  include: install.yml
+  import_tasks: install.yml
   tags:
     - install
 
 - name: Azkaban | Config
-  include: config.yml
+  import_tasks: config.yml
   tags:
     - config
 
 - name: Azkaban | Service
-  include: service.yml
+  import_tasks: service.yml
   tags:
     - service
