--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -80,10 +80,12 @@
   when:
       - azkaban_db_check.stdout == "0"
 
-- include: install-web.yml
+- name: Azkaban | Install Web
+  import_tasks: install-web.yml
   tags: azkaban-web
   when: azkaban_server_role in ["web", "all"]
 
-- include: install-executor.yml
+- name: Azkaban | Install Executor
+  import_tasks: install-executor.yml
   tags: azkaban-executor
   when: azkaban_server_role in ["executor", "all"]
