--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  author: Idealista S.A.U.
   company: Idealista S.A.U.
   description: Azkaban role
   min_ansible_version: 2.4.5.0
