--- a/tasks/install-executor.yml
+++ b/tasks/install-executor.yml
@@ -2,7 +2,7 @@
 
 - name: Azkaban | Extract Azkaban executor server
   unarchive:
-    copy: no
+    copy: false
     src: "/tmp/{{ azkaban_version_build_name }}/azkaban-exec-server/build/distributions/azkaban-exec-server-{{ azkaban_server_version }}.zip"
     dest: "/opt"
     owner: "{{ azkaban_user }}"
@@ -14,7 +14,7 @@
     src: "/opt/azkaban-exec-server-{{ azkaban_server_version }}"
     dest: "{{ azkaban_exec_server_install_dir }}"
     state: link
-    force: yes
+    force: true
     owner: "{{ azkaban_user }}"
     group: "{{ azkaban_group }}"
   when: azkaban_version_check|failed or azkaban_version_check.stdout != azkaban_version
