--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -1,4 +1,3 @@
-
 ---
 
 - name: Azkaban | Configuring webserver
@@ -6,7 +5,7 @@
     name: azkaban-{{ item }}
     state: "{{ azkaban_service_state }}"
     enabled: "{{ azkaban_service_enabled }}"
-    daemon_reload: yes
+    daemon_reload: true
   with_items:
     - "webserver"
   when: azkaban_server_role in ["web", "all"]
@@ -16,7 +15,7 @@
     name: azkaban-{{ item }}
     state: "{{ azkaban_service_state }}"
     enabled: "{{ azkaban_service_enabled }}"
-    daemon_reload: yes
+    daemon_reload: true
   with_items:
     - "executorserver"
   when: azkaban_server_role in ["executor", "all"]
